# jackal

./: LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
cogs/: map.py
jackal/: __main__.py
